# elysium

./: Cargo.toml  build.rs  justfile
src/: dirs.rs  main.rs  ui.rs
ui/: app.slint
