# SPDX-FileCopyrightText: 2025 Spencer
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "elysium"
version = "0.1.0"
authors = ["Spencer"]
edition = "2024"
license = "AGPL-3.0-only"

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[target.'cfg(unix)'.dependencies]
slint = { version = "1.12.1", default-features = false, features = ["accessibility", "backend-qt", "compat-1-2", "std"] }

[target.'cfg(windows)'.dependencies]
slint = { version = "1.12.1", default-features = false, features = ["accessibility", "backend-winit", "renderer-skia-opengl", "compat-1-2", "std"] }

[build-dependencies]
slint-build = "1.12.1"

[target.'cfg(windows)'.build-dependencies]
winresource = { version = "0.1.22", default-features = false }
